--- a/CV.Management.Web/Views/Shared/_Layout.cshtml
+++ b/CV.Management.Web/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="dropdown first-element-in-dropdown">
+                        <li class="dropdown navbar-first-element-in-dropdown">
                             <a href="#" class="dropdown-toggle dropdown-title" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Language <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a class="language-submenu-item" href="/cv/profile/en">EN</a></li>
@@ -48,7 +48,7 @@
                             </ul>
                         </li>
                         <li class="preview-link">
-                            <div class="preview-container">
+                            <div class="navbar-preview-container">
                                 <img src="~/Content/Images/preview.png" />
                                 <a>Preview</a>
                             </div>                        </li>
