--- a/CV.Management.Web/Content/Site.css
+++ b/CV.Management.Web/Content/Site.css
@@ -5,8 +5,15 @@
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 5px;
+    padding-right: 10px;
+}
+
+@media only screen and (min-width : 480px) {
+    .body-content {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
