--- a/CV.Management.Web/Views/Shared/EditorTemplates/AdditionalFilesViewModel.cshtml
+++ b/CV.Management.Web/Views/Shared/EditorTemplates/AdditionalFilesViewModel.cshtml
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h5 class="additional-files-label"> @Resources.AdditionalFiles</h5>
+        <h5 class="bold"> @Resources.AdditionalFiles</h5>
     </div>
 </div>
 
