--- a/CV.Management.Web/Content/main.css
+++ b/CV.Management.Web/Content/main.css
@@ -131,6 +131,10 @@ h5 {
     font-style: italic;
 }
 
+.right-border {
+    border-right: 1px solid rgb(221, 221, 221);
+}
+
 .field-validation-error {
     color: red;
 }
@@ -178,7 +182,9 @@ h5 {
 
 /* Medium Devices, Desktops */
 @media only screen and (min-width : 992px) {
-
+    .right-border {
+        border-right: 0px;
+    }
 }
 
 @media (min-width: 1200px) {
