--- a/CV.Management.Web/Views/Shared/EditorTemplates/EducationViewModel.cshtml
+++ b/CV.Management.Web/Views/Shared/EditorTemplates/EducationViewModel.cshtml
@@ -13,7 +13,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-11 col-md-11 education-main">
+            <div class="col-xs-11 col-md-11 right-border">
                 <div class="row">
                     <div class="col-md-2 col-sm-6">
                         <div class="form-group">
