--- a/CV.Management.Web/Views/Shared/EditorTemplates/LanguageViewModel.cshtml
+++ b/CV.Management.Web/Views/Shared/EditorTemplates/LanguageViewModel.cshtml
@@ -6,41 +6,48 @@
     <div id="language_container">
         @for (var i = 0; i < Model.Languages.Count; i++)
         {
-            <div class="language_row row">
-                <div class="col-md-11">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.Languages[i].LanguageName, new { @class = "language-name-label control-label" })
-                                @Html.EnumDropDownListFor(model => model.Languages[i].LanguageName, "Language", new { @class = "language-name-select form-control" })
-                                @Html.ValidationMessageFor(model => model.Languages[i].LanguageName, "", new { @class = "language-name-validation" })
-                            </div>
+        <div class="language_row row">
+            <div class="col-xs-12">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h5 class="uppercase">@Resources.LanguageEntry #<span class="language-number">@(i + 1)</span></h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-11 right-border">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Languages[i].LanguageName, new { @class = "language-name-label control-label" })
+                            @Html.EnumDropDownListFor(model => model.Languages[i].LanguageName, "Language", new { @class = "language-name-select form-control" })
+                            @Html.ValidationMessageFor(model => model.Languages[i].LanguageName, "", new { @class = "language-name-validation" })
                         </div>
-                        <div class="col-md-4">
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.Languages[i].SpokenLevel, new { @class = "language-spoken-label control-label" })
-                                @Html.EnumDropDownListFor(model => model.Languages[i].SpokenLevel, "Spoken level", new { @class = "language-spoken-select form-control" })
-                                @Html.ValidationMessageFor(model => model.Languages[i].SpokenLevel, "", new { @class = "language-spoken-validation" })
-                            </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Languages[i].SpokenLevel, new { @class = "language-spoken-label control-label" })
+                            @Html.EnumDropDownListFor(model => model.Languages[i].SpokenLevel, "Spoken level", new { @class = "language-spoken-select form-control" })
+                            @Html.ValidationMessageFor(model => model.Languages[i].SpokenLevel, "", new { @class = "language-spoken-validation" })
                         </div>
-                        <div class="col-md-4">
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.Languages[i].WrittenLevel, new { @class = "language-written-label control-label" })
-                                @Html.EnumDropDownListFor(model => model.Languages[i].WrittenLevel, "Written level", new { @class = "language-written-select form-control" })
-                                @Html.ValidationMessageFor(model => model.Languages[i].WrittenLevel, "", new { @class = "language-written-validation" })
-                            </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Languages[i].WrittenLevel, new { @class = "language-written-label control-label" })
+                            @Html.EnumDropDownListFor(model => model.Languages[i].WrittenLevel, "Written level", new { @class = "language-written-select form-control" })
+                            @Html.ValidationMessageFor(model => model.Languages[i].WrittenLevel, "", new { @class = "language-written-validation" })
                         </div>
                     </div>
                 </div>
-                <div class="col-md-1">
-                    <img class="remove-button language-remove" src="~/Content/Images/remove.png" />
-                </div>
             </div>
+            <div class="col-xs-1">
+                <img class="remove-button language-remove" src="~/Content/Images/remove.png" />
+            </div>
+        </div>
         }
     </div>
 
     <div class="row">
-        <div class="col-md-12 text-center add-button">
+        <div class="col-xs-12 text-center add-button">
             <span id="language_add" class="tab_more uppercase">@Resources.AddLanguage</span>
         </div>
     </div>
