--- a/CV.Management.Web/Views/Shared/EditorTemplates/CareerSummaryViewModel.cshtml
+++ b/CV.Management.Web/Views/Shared/EditorTemplates/CareerSummaryViewModel.cshtml
@@ -8,23 +8,23 @@
         @for (var i = 0; i < Model.Companies.Count; i++)
         {
             <div class="company_row row">
-                <div class="col-md-12">
+                <div class="col-xs-12">
                     <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-xs-12">
                             <h5 class="uppercase">@Resources.Company #<span class="company-number">@(i + 1)</span></h5>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-11">
+                <div class="col-xs-11 right-border">
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-sm-6 col-xs-12">
                             <div class="form-group">
                                 @Html.LabelFor(model => Model.Companies[i].Name, new { @class = "company-name-label control-label" })
                                 @Html.TextBoxFor(model => Model.Companies[i].Name, new { @class = "company-name-input form-control", @placeholder = @Resources.CompanyName })
                                 @Html.ValidationMessageFor(model => Model.Companies[i].Name, "", new { @class = "company-name-validation" })
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-sm-6 col-xs-12">
                             <div class="form-group">
                                 @Html.LabelFor(model => Model.Companies[i].City, new { @class = "company-city-label control-label" })
                                 @Html.TextBoxFor(model => Model.Companies[i].City, new { @class = "company-city-input form-control", @placeholder = @Resources.City })
@@ -33,21 +33,21 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-sm-6 col-xs-12">
                             <div class="form-group">
                                 @Html.LabelFor(model => Model.Companies[i].ParentCompanyName, new { @class = "company-parent-company-label control-label" })
                                 @Html.TextBoxFor(model => Model.Companies[i].ParentCompanyName, new { @class = "company-parent-company-input form-control", @placeholder = @Resources.ParentCompanyName })
                                 @Html.ValidationMessageFor(model => Model.Companies[i].ParentCompanyName, "", new { @class = "company-parent-company-validation" })
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-sm-6 col-xs-12">
                             <div class="form-group">
                                 @Html.LabelFor(m => Model.Companies[i].Industry, new { @class = "company-industry-label" })
                                 @Html.EnumDropDownListFor(model => Model.Companies[i].Industry, "Please, select industry", new { @class = "company-industry-select form-control" })
                                 @Html.ValidationMessageFor(model => model.Companies[i].Industry, "", new { @class = "company-industry-validation" })
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-sm-6 col-xs-12">
                             <div class="form-group">
                                 @Html.LabelFor(model => Model.Companies[i].OtherIndustry, new { @class = "company-other-industry-label control-label" })
                                 @Html.TextBoxFor(model => Model.Companies[i].OtherIndustry, new { @class = "company-other-industry-input form-control", @placeholder = @Resources.OtherIndustry })
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-sm-6 col-xs-12">
                             <div class="form-group">
                                 @Html.LabelFor(model => Model.Companies[i].MainProductions, new { @class = "company-productions-label control-label" })
                                 @Html.TextBoxFor(model => Model.Companies[i].MainProductions, new { @class = "company-productions-input form-control", @placeholder = @Resources.MainProductions })
@@ -64,14 +64,14 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4">
+                        <div class="col-sm-6 col-xs-12">
                             <div class="form-group">
-                                @Html.LabelFor(model => Model.Companies[i].Turnover, new { @class = "company-turnover-label control-label" }) <span class="italic">@Resources.TurnoverExample</span>
+                                @Html.LabelFor(model => Model.Companies[i].Turnover, new { @class = "company-turnover-label control-label" })
                                 @Html.TextBoxFor(model => Model.Companies[i].Turnover, new { @class = "company-turnover-input form-control", @placeholder = @Resources.TurnoverPlaceholder })
                                 @Html.ValidationMessageFor(model => Model.Companies[i].Turnover, "", new { @class = "company-turnover-validation" })
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-sm-6 col-xs-12">
                             <div class="form-group">
                                 @Html.LabelFor(model => Model.Companies[i].NumberOfEmployess, new { @class = "company-employees-label control-label" })
                                 @Html.TextBoxFor(model => Model.Companies[i].NumberOfEmployess, new { @class = "company-employees-input form-control", @placeholder = @Resources.NumberOfEmployess })
@@ -80,33 +80,33 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-xs-1">
                     <img class="remove-button company-remove" src="~/Content/Images/remove.png" />
                 </div>
                 <div class="positions_container">
                     @for (var j = 0; j < Model.Companies[i].Positions.Count; j++)
                     {
                         <div class="position_row row">
-                            <div class="col-md-11 col-md-offset-1">
+                            <div class="col-xs-12">
                                 <h5>@Resources.Position #<span class="position-number">@(j + 1)</span></h5>
                             </div>
-                            <div class="col-md-11">
+                            <div class="col-xs-11 right-border">
                                 <div class="row">
-                                    <div class="col-md-5 col-md-offset-1 left-border left-control">
+                                    <div class="col-xs-12">
                                         <div class="form-group">
                                             @Html.LabelFor(model => Model.Companies[i].Positions[j].Name, new { @class = "position-name-label control-label" })
                                             @Html.TextBoxFor(model => Model.Companies[i].Positions[j].Name, new { @class = "position-name-input form-control", @placeholder = @Resources.PositionName })
                                             @Html.ValidationMessageFor(model => Model.Companies[i].Positions[j].Name, "", new { @class = "position-name-validation" })
                                         </div>
                                     </div>
-                                    <div class="col-md-3">
+                                    <div class="col-xs-12 col-sm-6">
                                         <div class="form-group">
                                             @Html.LabelFor(model => Model.Companies[i].Positions[j].FromTime, new { @class = "position-from-time-label control-label" })
                                             @Html.TextBoxFor(model => Model.Companies[i].Positions[j].FromTime, new { @class = "position-from-time-input form-control", @placeholder = @Resources.FromTime })
                                             @Html.ValidationMessageFor(model => Model.Companies[i].Positions[j].FromTime, "", new { @class = "position-from-time-validation" })
                                         </div>
                                     </div>
-                                    <div class="col-md-3">
+                                    <div class="col-xs-12 col-sm-6">
                                         <div class="form-group">
                                             @Html.LabelFor(model => Model.Companies[i].Positions[j].ToTime, new { @class = "position-to-time-label control-label" })
                                             @Html.TextBoxFor(model => Model.Companies[i].Positions[j].ToTime, new { @class = "position-to-time-input form-control", @placeholder = @Resources.ToTime })
@@ -117,45 +117,35 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-11 col-md-offset-1 left-border">
+                                    <div class="col-xs-12">
                                         <div class="form-group">
                                             @Html.LabelFor(model => Model.Companies[i].Positions[j].KeyTasks, new { @class = "position-key-tasks-label control-label" })
                                             @Html.TextAreaFor(model => Model.Companies[i].Positions[j].KeyTasks, new { @class = "position-key-tasks-input form-control", @rows = 5, @placeholder = @Resources.KeyTasksPlaceholder })
                                             @Html.ValidationMessageFor(model => Model.Companies[i].Positions[j].KeyTasks, "", new { @class = "position-key-tasks-validation" })
                                         </div>
                                     </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-4 col-md-offset-1 left-border">
+                                    <div class="col-xs-12">
                                         <div class="form-group">
                                             @Html.LabelFor(model => Model.Companies[i].Positions[j].ReportingTo, new { @class = "position-reporting-to-label control-label" })
                                             @Html.TextBoxFor(model => Model.Companies[i].Positions[j].ReportingTo, new { @class = "position-reporting-to-input form-control", @placeholder = @Resources.ReportingTo })
                                             @Html.ValidationMessageFor(model => Model.Companies[i].Positions[j].ReportingTo, "", new { @class = "position-reporting-to-validation" })
                                         </div>
                                     </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-11 col-md-offset-1 left-border">
+                                    <div class="col-xs-12">
                                         <div class="form-group">
                                             @Html.LabelFor(model => Model.Companies[i].Positions[j].DirectSubordinates, new { @class = "position-subordinates-label control-label" })
                                             @Html.TextAreaFor(model => Model.Companies[i].Positions[j].DirectSubordinates, new { @class = "position-subordinates-input form-control", @rows = 5, @placeholder = @Resources.DirectSubordinates })
                                             @Html.ValidationMessageFor(model => Model.Companies[i].Positions[j].DirectSubordinates, "", new { @class = "position-subordinates-validation" })
                                         </div>
                                     </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-11 col-md-offset-1 left-border">
+                                    <div class="col-xs-12">
                                         <div class="form-group">
                                             @Html.LabelFor(model => Model.Companies[i].Positions[j].Achievements, new { @class = "position-achievements-label control-label" })
                                             @Html.TextAreaFor(model => Model.Companies[i].Positions[j].Achievements, new { @class = "position-achievements-input form-control", @rows = 5, @placeholder = @Resources.Achievements })
                                             @Html.ValidationMessageFor(model => Model.Companies[i].Positions[j].Achievements, "", new { @class = "position-achievements-validation" })
                                         </div>
                                     </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-11 col-md-offset-1 left-border">
+                                    <div class="col-xs-12">
                                         <div class="form-group">
                                             @Html.LabelFor(model => Model.Companies[i].Positions[j].ReasonForLeaving, new { @class = "position-reason-label control-label" })
                                             @Html.TextAreaFor(model => Model.Companies[i].Positions[j].ReasonForLeaving, new { @class = "position-reason-input form-control", @rows = 5, @placeholder = @Resources.ReasonForLeaving })
@@ -163,8 +153,9 @@
                                         </div>
                                     </div>
                                 </div>
+                                
                             </div>
-                            <div class="col-md-1">
+                            <div class="col-xs-1">
                                 <img class="remove-button position-remove" src="~/Content/Images/remove.png" />
                             </div>
                         </div>
@@ -172,7 +163,7 @@
 
                 </div>
                 <div class="row">
-                    <div class="col-md-offset-1 col-md-10 text-center">
+                    <div class="col-xs-offset-1 col-xs-10 text-center">
                         <span id="position_add" class="position_add tab_more uppercase">@Resources.AddPosition</span>
                     </div>
                 </div>
@@ -180,7 +171,7 @@
         }
     </div>
 
-    <div class="col-md-12 text-center add-button">
+    <div class="col-xs-12 text-center add-button">
         <span id="career_summary_add" class="tab_more uppercase">@Resources.AddCompany</span>
     </div>
 </div>
