--- a/CV.Management.Web/Views/Admin/_AdminLayout.cshtml
+++ b/CV.Management.Web/Views/Admin/_AdminLayout.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <nav class="navbar navbar-inverse">
+        <nav class="navbar navbar-default navbar-static-top">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
