--- a/CV.Management.Web/Views/Cv/Profile.cshtml
+++ b/CV.Management.Web/Views/Cv/Profile.cshtml
@@ -15,7 +15,7 @@
     </div>
 </div>
 
-@using (Html.BeginForm("ProfileSummary", "Cv", FormMethod.Post, new { encType = "multipart/form-data" }))
+@using (Html.BeginForm("ProfileSummary", "Cv", FormMethod.Post, new { encType = "multipart/form-data", id = "profile_form" }))
 {
 
     <div class="panel-group" id="accordion">
