--- a/CV.Management.Web/Views/Shared/EditorTemplates/PersonalInformationViewModel.cshtml
+++ b/CV.Management.Web/Views/Shared/EditorTemplates/PersonalInformationViewModel.cshtml
@@ -2,8 +2,11 @@
 
 <div class="row">
 
-    <div class="col-xs-12 hide-on-large-device">
+    <div class="col-xs-12">
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    </div>
 
+    <div class="col-md-4 col-sm-4 col-xs-12">
         <div class="row text-center">
             @if (!string.IsNullOrEmpty(Model.ImageSrc))
             {
@@ -32,113 +35,8 @@
         </div>
 
     </div>
-    <div class="col-xs-12 hide-on-large-device">
-
+    <div class="col-md-4 col-sm-8 col-xs-12">
         <div class="row">
-
-            <div class="col-xs-12">
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            </div>
-
-        </div>
-
-        <div class="row">
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.FullName, new { @class = "control-label col-xs-12" })
-                <div class="col-xs-12">
-                    @Html.TextBoxFor(model => model.FullName, new { @class = "form-control", @placeholder = @Resources.FullName })
-                    @Html.ValidationMessageFor(model => model.FullName)
-                </div>
-
-                @Html.LabelFor(model => model.LinkedInLink, new { @class = "control-label col-xs-12" })
-                <div class="col-xs-12">
-                    @Html.TextBoxFor(model => model.LinkedInLink, new { @class = "form-control", @placeholder = @Resources.LinkedInLink })
-                    @Html.ValidationMessageFor(model => model.LinkedInLink)
-                </div>
-
-                @Html.LabelFor(model => model.Address, new { @class = "control-label col-xs-12" })
-                <div class="col-xs-12">
-                    @Html.TextBoxFor(model => model.Address, new { @class = "form-control", @placeholder = @Resources.AddressPlaceholder })
-                    @Html.ValidationMessageFor(model => model.Address)
-                </div>
-
-                @Html.LabelFor(model => model.Phone, new { @class = "control-label col-xs-12" })
-                <div class="col-xs-12">
-                    <div class="row">
-                        <div class="col-xs-4 phone-code-input-div">
-                            @Html.TextBoxFor(model => model.PhoneCode, new { @class = "form-control", @placeholder = @Resources.PhoneCodePlaceholder })
-                            @Html.ValidationMessageFor(model => model.PhoneCode)
-                        </div>
-                        <div class="col-xs-8 phone-input-div">
-                            @Html.TextBoxFor(model => model.Phone, new { @class = "form-control", @placeholder = @Resources.PhonePlaceholder })
-                            @Html.ValidationMessageFor(model => model.Phone)
-                        </div>
-                    </div>
-                </div>
-
-                @Html.LabelFor(model => model.Email, new { @class = "control-label col-xs-12" })
-                <div class="col-xs-12">
-                    @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @placeholder = @Resources.Email })
-                    @Html.ValidationMessageFor(model => model.Email)
-                </div>
-
-                @Html.LabelFor(model => model.OtherInformation, new { @class = "control-label col-xs-12" })
-                <div class="col-xs-12">
-                    @Html.TextBoxFor(model => model.OtherInformation, new { @class = "form-control", @placeholder = @Resources.OtherInformation })
-                    @Html.ValidationMessageFor(model => model.OtherInformation)
-                </div>
-
-                @Html.LabelFor(model => model.Project, new { @class = "control-label col-xs-12" })
-                <div class="col-xs-12">
-                    @Html.TextBoxFor(model => model.Project, new { @class = "form-control", @placeholder = @Resources.Project })
-                    @Html.ValidationMessageFor(model => model.Project)
-                </div>
-
-            </div>
-
-        </div>
-
-    </div>
-
-    <div class="col-xs-4 hide-on-small-device">
-        <div class="row text-center">
-            @if (!string.IsNullOrEmpty(Model.ImageSrc))
-            {
-                <img id="real-profile-image" src="@Model.ImageSrc" class="profile-image img-rounded" />
-                <img id="default-profile-image" src="~/Content/Images/default_pic.png" class="img-rounded" style="display:none;" />
-            }
-            else
-            {
-                <img id="default-profile-image" src="~/Content/Images/default_pic.png" class="img-rounded" />
-                <img id="real-profile-image" src="@Model.ImageSrc" class="profile-image img-rounded" style="display:none;" />
-            }
-        </div>
-
-        <div class="row">
-            <div class="col-md-12">
-                @Html.TextBoxFor(m => m.ProfilePicture, new { id = "file_upload", type = "file", name = "ProfilePicture", @class = "btn btn-default upload-button" })
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="form-group">
-                <div class="col-md-12">
-                    <span class="btn btn-primary form-control delete-photo">@Resources.DeletePhoto</span>
-                </div>
-            </div>
-        </div>
-
-    </div>
-    <div class="col-xs-8 personal-information hide-on-small-device">
-        <div class="row">
-
-            <div class="col-md-12">
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            </div>
-
-            <div class="col-md-6">
-                <div class="row">
                     <div class="form-group">
                         @Html.LabelFor(model => model.FullName, new { @class = "control-label col-md-12" })
                         <div class="col-md-12">
@@ -152,53 +50,48 @@
                             @Html.ValidationMessageFor(model => model.LinkedInLink)
                         </div>
                     </div>
-
+        </div>
+    </div>
+    <div class="col-md-4 col-sm-8 col-xs-12">
+        <div class="row">
+            <div class="form-group">
+                @Html.LabelFor(model => model.Address, new { @class = "control-label col-md-12" })
+                <div class="col-md-12">
+                    @Html.TextBoxFor(model => model.Address, new { @class = "form-control", @placeholder = @Resources.AddressPlaceholder })
+                    @Html.ValidationMessageFor(model => model.Address)
                 </div>
-            </div>
-            <div class="col-md-6">
-                <div class="row">
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Address, new { @class = "control-label col-md-12" })
-                        <div class="col-md-12">
-                            @Html.TextBoxFor(model => model.Address, new { @class = "form-control", @placeholder = @Resources.AddressPlaceholder })
-                            @Html.ValidationMessageFor(model => model.Address)
+                @Html.LabelFor(model => model.Phone, new { @class = "control-label col-md-12" })
+                <div class="col-md-12">
+                    <div class="row">
+                        <div class="col-xs-4 phone-code-input-div">
+                            @Html.TextBoxFor(model => model.PhoneCode, new { @class = "form-control", @placeholder = @Resources.PhoneCodePlaceholder })
+                            @Html.ValidationMessageFor(model => model.PhoneCode)
                         </div>
-
-                        @Html.LabelFor(model => model.Phone, new { @class = "control-label col-md-12" })
-                        <div class="col-md-12">
-                            <div class="row">
-                                <div class="col-xs-4 phone-code-input-div">
-                                    @Html.TextBoxFor(model => model.PhoneCode, new { @class = "form-control", @placeholder = @Resources.PhoneCodePlaceholder })
-                                    @Html.ValidationMessageFor(model => model.PhoneCode)
-                                </div>
-                                <div class="col-xs-8 phone-input-div">
-                                    @Html.TextBoxFor(model => model.Phone, new { @class = "form-control", @placeholder = @Resources.PhonePlaceholder })
-                                    @Html.ValidationMessageFor(model => model.Phone)
-                                </div>
-                            </div>
+                        <div class="col-xs-8 phone-input-div">
+                            @Html.TextBoxFor(model => model.Phone, new { @class = "form-control", @placeholder = @Resources.PhonePlaceholder })
+                            @Html.ValidationMessageFor(model => model.Phone)
                         </div>
-
-                        @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-12" })
-                        <div class="col-md-12">
-                            @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @placeholder = @Resources.Email })
-                            @Html.ValidationMessageFor(model => model.Email)
-                        </div>
-
-                        @Html.LabelFor(model => model.OtherInformation, new { @class = "control-label col-md-12" })
-                        <div class="col-md-12">
-                            @Html.TextBoxFor(model => model.OtherInformation, new { @class = "form-control", @placeholder = @Resources.OtherInformation })
-                            @Html.ValidationMessageFor(model => model.OtherInformation)
-                        </div>
-
-                        @Html.LabelFor(model => model.Project, new { @class = "control-label col-md-12" })
-                        <div class="col-md-12">
-                            @Html.TextBoxFor(model => model.Project, new { @class = "form-control", @placeholder = @Resources.Project })
-                            @Html.ValidationMessageFor(model => model.Project)
-                        </div>
-
-
                     </div>
                 </div>
+                @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-12" })
+                <div class="col-md-12">
+                    @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @placeholder = @Resources.Email })
+                    @Html.ValidationMessageFor(model => model.Email)
+                </div>
+
+                @Html.LabelFor(model => model.OtherInformation, new { @class = "control-label col-md-12" })
+                <div class="col-md-12">
+                    @Html.TextBoxFor(model => model.OtherInformation, new { @class = "form-control", @placeholder = @Resources.OtherInformation })
+                    @Html.ValidationMessageFor(model => model.OtherInformation)
+                </div>
+
+                @Html.LabelFor(model => model.Project, new { @class = "control-label col-md-12" })
+                <div class="col-md-12">
+                    @Html.TextBoxFor(model => model.Project, new { @class = "form-control", @placeholder = @Resources.Project })
+                    @Html.ValidationMessageFor(model => model.Project)
+                </div>
+
+
             </div>
         </div>
     </div>
