--- a/CV.Management.Web/Content/navigation-bar.css
+++ b/CV.Management.Web/Content/navigation-bar.css
@@ -75,7 +75,8 @@ navbar-default .language-submenu-item {
 .navbar-preview-container {
     padding-top: 30px;
     padding-bottom: 30px;
-    padding-left: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
     cursor: pointer;
 }
     .navbar-preview-container > img {
